client/src/styles/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: 'Inter', sans-serif;
  overflow-x: hidden;
}

.header-section {
  background-image: linear-gradient(black, #111827);
  padding: 100px;
  width: 100%;
}

.info-section,
.featured-vehicles,
.contact {
  width: 100%;
}

.slogan {
  color: white;
}

.featured-vehicles {
  background-color: white;
  color: black;
}

.inventory-button {
  background-color: #111827;
  color: #34D399;
  width: 150px;
  height: 50px;
  padding: 0px;
  outline: 2px solid #34D399;
  border-radius: 999px;
}

.inventory-button:hover {
  background-color: #34D399;
  color: #111827;
}

.contact {
  background-color: white;
  padding: 60px;
  text-align: center;
}

.contact-title {
  font-size: 25px;
}

.visit-us {
  padding-top: 18px;
  font-size: 18px;
  padding-bottom: 24px;
}

.contact-button {
  background-color: #38A169;
  color: white;
  outline: none;
  padding: 8px;
  width: 140px;
  border-radius: 24px;
  cursor: pointer;
  border: none;
  font-size: 14px;
  height: auto;
}

.info-section {
  background-color: #111827;
  display: flex;
  flex-direction: column;
  padding-top: 45px;
}

.info-card-container {
  display: flex;
  justify-content: space-evenly;
  text-align: center;
  padding: 18px;
  padding-top: 30px;
  padding-bottom: 60px;
}

.why-nyoomers {
  color: white;
  text-align: center;
  font-weight: bold;
  font-size: 26px;
}

